@@ -28,3 +28,4 @@ jackson-module-scala.version=2.10.2
 hive-storage-api.version=2.7.0
 protobuf-java.version=2.5.0
 mockito.version=1.8.4
+orc.version=1.5.6
