@@ -30,3 +30,4 @@ jackson-module-scala.version=2.12.7
 hive-storage-api.version=2.7.2
 protobuf-java.version=3.21.1
 mockito.version=2.28.2
+orc.version=1.5.13
