@@ -39,7 +39,6 @@ hbase2.version=2.4.14
 hsqldb.version=2.4.0
 hive1.version=1.2.1
 hive.version=3.1.2
-orc.version=1.5.6
 httpcomponents.version=4.4
 jackson.version=1.9.13
 jackson-pig-3039-test.version=1.9.9
